# tincr

./: .clang-tidy  .gitignore  AGENTS.md  Cargo.toml  README.md  RUST_REWRITE_10G.md  RUST_REWRITE_ISSUES.md  RUST_REWRITE_PLAN.md  THANKS  clippy.toml  flake.nix  meson.build  rustfmt.toml
.cargo/: config.toml
.ci/: deps.sh
.config/: nextest.toml
contrib/: tincd@.service  tincd@.socket
crates/tinc-conf/: Cargo.toml
crates/tinc-conf/src/: lib.rs  name.rs  parse.rs  pem.rs  vars.rs
crates/tinc-conf/tests/: bugs.rs  roundtrip.rs
crates/tinc-crypto/: Cargo.toml  build.rs
crates/tinc-crypto/asm/: PROVENANCE.md  README.md  arm_arch.h  poly1305_glue.c
crates/tinc-crypto/src/: aead.rs  b64.rs  chapoly.rs  ecdh.rs  hybrid.rs  invite.rs  lib.rs  prf.rs  sign.rs
crates/tinc-crypto/tests/: aesgcm.rs  asm_provenance.rs  kat.rs
crates/tinc-crypto/tests/kat/: vectors.json
crates/tinc-device/: Cargo.toml
crates/tinc-device/src/: arena.rs  bsd.rs  ether.rs  fd.rs  lib.rs  linux.rs  raw.rs  tso.rs
crates/tinc-device/src/bsd/: macos_x.rs  tests.rs
crates/tinc-device/src/tso/: tests.rs
crates/tinc-device/tests/: mq.rs  utun_batch.rs
crates/tinc-event/: Cargo.toml
crates/tinc-event/src/: io.rs  lib.rs  sig.rs  timer.rs
crates/tinc-event/src/io/: epoll.rs  kqueue.rs  mod.rs
crates/tinc-ffi/: Cargo.toml  build.rs
crates/tinc-ffi/csrc/: replay_shim.c  shim.c  shim.h  sizeof.c
crates/tinc-ffi/src/: lib.rs
crates/tinc-ffi/tests/: handshake.rs
crates/tinc-sptps/: Cargo.toml
crates/tinc-sptps/src/: lib.rs  state.rs
crates/tinc-sptps/tests/: aead.rs  fastpath.rs  hybrid_kex.rs  preauth_reclen.rs  rekey_after_bad_handshake.rs  replay_window.rs  small_order_replay.rs  stream_reassembly.rs  vs_c.rs
crates/tinc-sptps/tests/bugs/: adversarial_framing.rs  c_interop.rs  confirm_state_send.rs  fastpath_replay_window.rs  hybrid_stream.rs  main.rs  open_data_into_err_buffer.rs  send_record_oversized.rs  seqno_wrap_nonce_reuse.rs
crates/tinc-sptps/tests/common/: mod.rs
crates/tinc-tools/: Cargo.toml
crates/tinc-tools/src/: ctl.rs  keypair.rs  lib.rs  names.rs  testutil.rs  tui.rs
crates/tinc-tools/src/cmd/: config.rs  ctl_simple.rs  dump.rs  edit.rs  exchange.rs  fsck.rs  genkey.rs  info.rs  init.rs  invite.rs  join.rs  mod.rs  network.rs  sign.rs  start.rs  stream.rs  top.rs
crates/tinc-tools/src/cmd/config/: tests.rs
crates/tinc-tools/src/cmd/dump/: tests.rs
crates/tinc-tools/src/cmd/fsck/: conf.rs  display.rs  keys.rs  scripts.rs  tests.rs
crates/tinc-tools/src/cmd/info/: tests.rs
crates/tinc-tools/src/cmd/join/: finalize.rs  server_stub.rs  tests.rs  url.rs  wire.rs
crates/tinc-tools/src/cmd/sign/: tests.rs
crates/tinc-tools/src/cmd/top/: tests.rs
crates/tinc-tools/src/ctl/: rows.rs  tests.rs
crates/tinc-tools/tests/: join_chunk2_hardening.rs  self_roundtrip.rs  tinc_cli.rs
crates/tinc-tools/tests/tinc_cli/: argv.rs  config.rs  cross_impl.rs  ctl.rs  dump.rs  edit.rs  export_import.rs  fake_daemon.rs  fsck.rs  genkey.rs  info.rs  init.rs  invite_join.rs  main.rs  sign_verify.rs  top_log_pcap.rs
crates/tincd/: Cargo.toml  build.rs
crates/tincd-bpf/: Cargo.toml
crates/tincd-bpf/src/: attach.rs  cbpf.rs  lib.rs
crates/tincd-bpf/tests/: steer.rs
crates/tincd/benches/: throughput.rs  throughput_macos.rs
crates/tincd/minilzo/: README
crates/tincd/src/: addr.rs  addrcache.rs  autoconnect.rs  bgresolve.rs  broadcast.rs  compress.rs  conn.rs  control.rs  daemon.rs  darwin_x.rs  discovery.rs  dispatch.rs  dns.rs  egress.rs  fragment.rs  graph_glue.rs  icmp.rs  ids.rs  inthash.rs  invitation_serve.rs  keys.rs  lib.rs  listen.rs  local_addr.rs  log_tap.rs  mac_lease.rs  main.rs  mss.rs  neighbor.rs  node_id.rs  outgoing.rs  packet.rs  platform.rs  pmtu.rs  portmap.rs  proto.rs  punch.rs  reload.rs  route.rs  route_decide.rs  (+12 more)
crates/tincd/src/conn/: tests.rs
crates/tincd/src/daemon/: connect.rs  dp.rs  dump.rs  gossip.rs  intervals.rs  metaconn.rs  net.rs  periodic.rs  punch.rs  purge.rs  settings.rs  setup.rs  tx_control.rs  txpath.rs
crates/tincd/src/daemon/gossip/: edges.rs  graph.rs  keys.rs  mod.rs  send.rs  subnets.rs  weight.rs
crates/tincd/src/daemon/net/: device.rs  helpers.rs  icmp.rs  macos_rx.rs  route.rs  rx.rs  sptps.rs
crates/tincd/src/discovery/: blind.rs  mod.rs  netif.rs  persist.rs  probe.rs  record.rs  worker.rs
crates/tincd/src/dispatch/: tests.rs
crates/tincd/src/egress/: linux.rs  macos.rs
crates/tincd/src/event/: mod.rs  sig.rs  timer.rs
crates/tincd/src/event/io/: epoll.rs  kqueue.rs  mod.rs
crates/tincd/src/graph/: mod.rs
crates/tincd/src/listen/: tarpit.rs  tests.rs
crates/tincd/src/mss/: tests.rs
crates/tincd/src/portmap/: igd.rs  mod.rs  pcp.rs
crates/tincd/src/proto/: tests.rs
crates/tincd/src/shard/: mod.rs  probe.rs  rx.rs  seal.rs  snapshot.rs
crates/tincd/src/shard/bpf/: attach.rs  cbpf.rs  mod.rs
crates/tincd/src/subnet_tree/: tests.rs
crates/tincd/tests/: addrcache.rs  bpf_steer.rs  busyloop.rs  crossimpl.rs  gossip_sim.rs  graph_kat.rs  macos_smoke.rs  netns.rs  reqkey_simultaneous.rs  retry.rs  scripts.rs  security.rs  socket_activation.rs  startup_hardening.rs  stop.rs  throughput.rs  two_daemons.rs
crates/tincd/tests/bugs/: gossip_edges.rs  main.rs
crates/tincd/tests/common/: bench.rs  mod.rs  node.rs
crates/tincd/tests/graph_kat/: graph.json
crates/tincd/tests/netns/: autoconnect_shortcut.rs  busyloop.rs  chaos.rs  dns.rs  main.rs  ping.rs  portmap.rs  rekey.rs  rig.rs  sandbox.rs  stress.rs  tcp_fallback.rs  udp_asymmetric.rs
crates/tincd/tests/stop/: cli_flags.rs  control.rs  lifecycle.rs  main.rs  peer.rs
crates/tincd/tests/two_daemons/: basic.rs  data_path.rs  dns.rs  fd_tunnel.rs  main.rs  node.rs  proxy.rs  purge.rs  reload.rs  reqkey_race.rs  script_latency.rs  three_node.rs
docs/: ARCHITECTURE.md  COMPAT.md  DNS.md  FIREWALL.md  NIXOS.md  OPERATING.md  PROTOCOL.md  PUNCH.md  QUICKSTART.md  SECURITY.md  TROUBLESHOOTING.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: replay_diff.rs  subnet_cmp_diff.rs
kat/: Makefile  gen_checksum.c  (+4 more)
(+111 files in other folders)
