[workspace]
resolver = "2"
members = [
    "crates/tinc-crypto",
    "crates/tinc-ffi",
    "crates/tinc-sptps",
    "crates/tinc-proto",
    "crates/tinc-graph",
    "crates/tinc-conf",
    "crates/tinc-device",
    "crates/tinc-event",
    "crates/tincd",
    "crates/tinc-tools",
]

[workspace.package]
edition = "2021"
license = "GPL-2.0-or-later"
rust-version = "1.75"

# Thin LTO for cross-crate inlining on the data path. The hot chain
# is `daemon::net::send_sptps_packet` (tincd) → `Sptps::seal_data_into`
# (tinc-sptps) → `ChaPoly::seal_into` (tinc-crypto) → `apply_keystream`
# (chacha20) → the AVX2 backend. With the default 16 codegen-units and
# no LTO, each crate boundary is a `call`; the inliner can't see
# across. Thin LTO collapses that chain. codegen-units=1 lets the
# inliner see the WHOLE tincd crate at once (`send_sptps_packet` →
# `send_sptps_data_relay` → four IntHashMap lookups, all inline-able
# into one straight-line block once the relay decision tree's branches
# are statically dead in the direct case). Full LTO would be marginally
# better but doubles link time; thin is the 90/10.
[profile.release]
lto = "thin"
codegen-units = 1

# Centralised version pins. The crypto crates here are load-bearing for wire
# compatibility — bumping them is a protocol-review event, not a routine update.
[workspace.dependencies]
# We need `ChaCha20Legacy` (DJB original: 64-bit nonce, 64-bit counter), not
# the default IETF 96/32 variant. In 0.9 it's unconditionally exported, no
# feature flag, but it IS gated behind `cfg(chacha20_force_soft)` removal in
# some older minors — pin tightly and check on bumps.
chacha20 = "0.9"
poly1305 = "0.8"
curve25519-dalek = { version = "4", features = ["digest"] }
ed25519-dalek = { version = "2", features = ["hazmat", "digest"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
