[workspace]
resolver = "2"
members = [
    "crates/tinc-crypto",
    "crates/tinc-ffi",
    "crates/tinc-sptps",
    "crates/tinc-proto",
    "crates/tinc-graph",
    "crates/tinc-conf",
    "crates/tinc-device",
    "crates/tinc-event",
    "crates/tincd",
    "crates/tinc-tools",
]

[workspace.package]
edition = "2024"
license = "GPL-2.0-or-later"
rust-version = "1.85"

# Thin LTO for cross-crate inlining on the data path. The hot chain
# is `daemon::net::send_sptps_packet` (tincd) → `Sptps::seal_data_into`
# (tinc-sptps) → `ChaPoly::seal_into` (tinc-crypto) → `apply_keystream`
# (chacha20) → the AVX2 backend. With the default 16 codegen-units and
# no LTO, each crate boundary is a `call`; the inliner can't see
# across. Thin LTO collapses that chain. codegen-units=1 lets the
# inliner see the WHOLE tincd crate at once (`send_sptps_packet` →
# `send_sptps_data_relay` → four IntHashMap lookups, all inline-able
# into one straight-line block once the relay decision tree's branches
# are statically dead in the direct case). Full LTO would be marginally
# better but doubles link time; thin is the 90/10.
[profile.release]
lto = "thin"
codegen-units = 1

# `--profile profiling` for `TINCD_PERF=1` runs. The default release
# profile has codegen-units=1 + thin-LTO + no debuginfo: everything
# inlines into a few huge functions and perf can't unwind through them.
# `Daemon::run` showed 12% cumulative instead of ~99%, and the perf
# sampling overhead itself was 2.5× worse than C (broken DWARF unwind
# falls back to scanning) — so profile data was misleading AND it
# perturbed throughput unequally. Debug info is dead weight in the
# binary at runtime; frame pointers cost one register (negligible at
# this width). Same opt-level/LTO/CGU — codegen is identical to release.
[profile.profiling]
inherits = "release"
debug = true
# rustc 1.94+: -Cforce-frame-pointers in cargo profiles. perf's default
# fp-unwind needs these; --call-graph=dwarf works without but adds
# measurable overhead (the test avoids it deliberately).
# Alternatively put this in RUSTFLAGS but then it's all-or-nothing.

# Centralised version pins. The crypto crates here are load-bearing for wire
# compatibility — bumping them is a protocol-review event, not a routine update.
[workspace.dependencies]
# We need `ChaCha20Legacy` (DJB original: 64-bit nonce, 64-bit counter), not
# the default IETF 96/32 variant. In 0.9 it's unconditionally exported, no
# feature flag, but it IS gated behind `cfg(chacha20_force_soft)` removal in
# some older minors — pin tightly and check on bumps.
chacha20 = "0.9"
poly1305 = "0.8"
curve25519-dalek = { version = "4", features = ["digest"] }
ed25519-dalek = { version = "2", features = ["hazmat", "digest"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
