[workspace]
resolver = "2"
members = [
    "crates/tinc-crypto",
    "crates/tinc-ffi",
    "crates/tinc-sptps",
    "crates/tinc-proto",
    "crates/tinc-conf",
    "crates/tinc-device",
    "crates/tincd",
    "crates/tinc-tools",
]

[workspace.package]
edition = "2024"
license = "GPL-2.0-or-later"
rust-version = "1.88"

# Single source of truth for lint policy. Every crate sets
# `[lints] workspace = true`. CI runs `clippy --all-targets -- -D warnings`,
# so warn-level pedantic here = hard error in CI.
#
# `priority = -1` lets crate-level #[allow(clippy::specific_lint)] in
# source override the group: pedantic loads first, item allows win.
# Without it, the group is non-deterministically ordered against
# explicit lints and you get spurious flicker.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Thin LTO for cross-crate inlining on the data path. The hot chain
# is `daemon::net::send_sptps_packet` (tincd) → `Sptps::seal_data_into`
# (tinc-sptps) → `ChaPoly::seal_into` (tinc-crypto) → `apply_keystream`
# (chacha20) → the AVX2 backend. With the default 16 codegen-units and
# no LTO, each crate boundary is a `call`; the inliner can't see
# across. Thin LTO collapses that chain. codegen-units=1 lets the
# inliner see the WHOLE tincd crate at once (`send_sptps_packet` →
# `send_sptps_data_relay` → four IntHashMap lookups, all inline-able
# into one straight-line block once the relay decision tree's branches
# are statically dead in the direct case). Full LTO would be marginally
# better but doubles link time; thin is the 90/10.
[profile.release]
lto = "thin"
codegen-units = 1

# `--profile profiling` for `TINCD_PERF=1` runs. The default release
# profile has codegen-units=1 + thin-LTO + no debuginfo: everything
# inlines into a few huge functions and perf can't unwind through them.
# `Daemon::run` showed 12% cumulative instead of ~99%, and the perf
# sampling overhead itself was 2.5× worse than C (broken DWARF unwind
# falls back to scanning) — so profile data was misleading AND it
# perturbed throughput unequally. Debug info is dead weight in the
# binary at runtime; frame pointers cost one register (negligible at
# this width). Same opt-level/LTO/CGU — codegen is identical to release.
[profile.profiling]
inherits = "release"
debug = true
# rustc 1.94+: -Cforce-frame-pointers in cargo profiles. perf's default
# fp-unwind needs these; --call-graph=dwarf works without but adds
# measurable overhead (the test avoids it deliberately).
# Alternatively put this in RUSTFLAGS but then it's all-or-nothing.

# Centralised version pins. The crypto crates here are load-bearing for wire
# compatibility — bumping them is a protocol-review event, not a routine update.
[workspace.dependencies]
# `ChaCha20Legacy` (DJB original: 64-bit nonce, 64-bit counter), not the
# default IETF 96/32 variant. Unconditionally exported in 0.9, no feature flag.
#
# chacha20/poly1305 stay at 0.9/0.8 even though the rest of the cohort is on
# the digest-0.11 prerelease. They reach generic-array via cipher 0.4 →
# crypto-common 0.1, NOT via digest, so the build still has exactly one
# digest version. 0.10's `ChaChaCore::process_with_backend` lost its
# `#[inline(always)]`, growing an out-of-line dispatch boundary in the hot
# path — the AVX2 SIMD itself inlines fine, the closure-based dispatch layer
# around it doesn't. ~21% throughput hit. Revisit when 0.10 fixes its inlining.
chacha20 = "0.9"
poly1305 = "0.8"
# digest-0.11 cohort: the upcoming DHT crate (mainline) pins ed25519-dalek
# 3.0-pre which transitively forces sha2 0.11. Carrying both dalek 2 and
# dalek 3-pre would mean two curve25519 builds, two sha2, two digest, two
# zeroize impls of the same key types — a coherence hazard, not just bloat.
# The hazmat surface we use (`ExpandedSecretKey::from_bytes`, `raw_sign`,
# `clamp_integer`, `MontgomeryPoint::mul_clamped`) is unchanged 2→3-pre;
# wire bytes are fixed by C tinc and the KAT suite (generated by C) pins them.
curve25519-dalek = { version = "5.0.0-pre.6", features = ["digest"] }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["hazmat", "digest"] }
sha2 = "0.11"
hmac = "0.13"
subtle = "2.5"

# Discovery (Tier 2a): BitTorrent Mainline DHT for BEP 42 reflexive address
# voting + BEP 44 mutable item publish. `node` feature only — no `async`, no
# `futures-lite`. The Dht actor runs on its own std::thread; we poll info()
# from the periodic timer. tincd's epoll loop never blocks on it.
#
# 6.0.x specifically, NOT 6.1: 6.1.1 has `digest = "=0.11.0-rc.10"` which
# fights cargo's resolver against our digest 0.11 (final release). 6.0.1's
# `^0.11.0-pre` is compatible with both prerelease and final. Re-check on
# mainline 7.
mainline = { version = "6.0", default-features = false, features = ["node"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
