[package]
name = "tinc-conf"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
tinc-crypto = { path = "../tinc-crypto" }
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
tempfile = "3"

[lints]
workspace = true
