[package]
name = "tinc-device"
version = "0.0.0"
edition.workspace = true
description = "TUN/TAP device for the tinc daemon. Linux-only for now."
publish = false

[dependencies]
# `libc::TUNSETIFF`, `libc::ifreq`, `libc::IFF_TUN`/`IFF_TAP`/
# `IFF_NO_PI`/`IFF_ONE_QUEUE`. Already in lockfile at 0.2.184
# transitively via nix; this just makes it a direct dep.
libc = "0.2.184"
# `log::warn!` for the vnet_hdr feature-detect failures. The daemon
# initializes the logger; these are level-gated no-ops in tests.
log = "0.4"
# `nix::ioctl_write_ptr_bad!` — same macro family as tui.rs's
# `ioctl_read_bad!`. The `ioctl` feature is the only one we need.
# `ioctl` would be the feature for `ioctl_write_ptr_bad!` — but we
# bypass the macro (TUNSETIFF is encoded _IOW yet kernel writes
# back; the macro generates `*const`, wrong contract). So: no
# `ioctl` feature. Direct `libc::ioctl` for that shim.
#
# `socket` IS pulled. `fd_device.c:39-93` does ~40 LOC of cmsghdr/
# CMSG_FIRSTHDR/CMSG_DATA boilerplate to receive an SCM_RIGHTS fd
# over AF_UNIX. nix::sys::socket::recvmsg + ControlMessageOwned::
# ScmRights collapses it AND fixes the C's NULL-deref bug at line
# 73 (CMSG_FIRSTHDR returns NULL when control buf is empty; C
# dereferences without checking; nix iterator handles it). The
# fourth unsafe-shim instance — but this time, nix earns the dep.
# `uio` gates cmsg_space! + recvmsg + ControlMessageOwned. The
# `socket` feature alone gives the AF_UNIX types but not the cmsg
# machinery. Both needed.
# `net` for `if_nametoindex` (raw_socket backend's SIOCGIFINDEX
# substitution).
nix = { version = "0.29", default-features = false, features = ["socket", "uio", "net"] }

[dev-dependencies]
# `geteuid()` for the root-skip in tests. `user` feature only.
# Not in main dep: the device crate doesn't check uid at runtime
# (CAP_NET_ADMIN, not root, is what matters; the daemon checks
# capabilities via `nix::sys::capability` or just lets the open
# fail with EACCES). The test skip is the only consumer.
nix = { version = "0.29", default-features = false, features = ["user"] }

[lints.rust]
# Third crate with scoped allows: tinc-tools (localtime_r,
# TIOCGWINSZ), now this (TUNSETIFF). The pattern: nix gives the
# safe-usage MACRO, libc gives the constants, the macro generates
# `unsafe fn`, we wrap it once with a SAFETY comment that says
# "the macro IS the safe-usage pattern, the unsafe is FFI calling
# convention."
unsafe_code = "deny"

[lints.clippy]
# Same pedantic gate as the other crates.
pedantic = { level = "warn", priority = -1 }
# doc_markdown wants backticks on every identifier-shaped word.
# Module-level allow with rationale; we'd be backticking every
# third word in the offset-layout doc.
doc_markdown = "allow"
