[package]
name = "tinc-device"
version = "0.0.0"
edition.workspace = true
description = "TUN/TAP device for the tinc daemon. Linux-only for now."
publish = false

[dependencies]
# `libc::TUNSETIFF`, `libc::ifreq`, `libc::IFF_TUN`/`IFF_TAP`/
# `IFF_NO_PI`/`IFF_ONE_QUEUE`. Already in lockfile at 0.2.184
# transitively via nix; this just makes it a direct dep.
libc = "0.2.184"
# `log::warn!` for the vnet_hdr feature-detect failures. The daemon
# initializes the logger; these are level-gated no-ops in tests.
log = "0.4"
# `nix::ioctl_write_ptr_bad!` — same macro family as tui.rs's
# `ioctl_read_bad!`. The `ioctl` feature is the only one we need.
# `ioctl` would be the feature for `ioctl_write_ptr_bad!` — but we
# bypass the macro (TUNSETIFF is encoded _IOW yet kernel writes
# back; the macro generates `*const`, wrong contract). So: no
# `ioctl` feature. Direct `libc::ioctl` for that shim.
#
# `socket` IS pulled. SCM_RIGHTS fd reception over AF_UNIX is ~40
# LOC of cmsghdr/CMSG_FIRSTHDR/CMSG_DATA boilerplate by hand;
# nix::sys::socket::recvmsg + ControlMessageOwned::ScmRights
# collapses it AND structurally avoids the CMSG_FIRSTHDR NULL-deref
# trap (nix's iterator handles empty control buffers). The fourth
# unsafe-shim instance — but this time, nix earns the dep.
# `uio` gates cmsg_space! + recvmsg + ControlMessageOwned. The
# `socket` feature alone gives the AF_UNIX types but not the cmsg
# machinery. Both needed.
# `net` for `if_nametoindex` (raw_socket backend's SIOCGIFINDEX
# substitution).
nix = { version = "0.31", default-features = false, features = ["socket", "uio", "net"] }

[dev-dependencies]
# `geteuid()` for the root-skip in tests. `user` feature only.
# Not in main dep: the device crate doesn't check uid at runtime
# (CAP_NET_ADMIN, not root, is what matters; the daemon checks
# capabilities via `nix::sys::capability` or just lets the open
# fail with EACCES). The test skip is the only consumer.
nix = { version = "0.31", default-features = false, features = ["user"] }

[lints]
workspace = true
