[package]
name = "tinc-device"
version = "0.0.0"
edition.workspace = true
description = "TUN/TAP device for the tinc daemon. Linux-only for now."
publish = false

[dependencies]
# `libc::TUNSETIFF`, `libc::ifreq`, `libc::IFF_TUN`/`IFF_TAP`/
# `IFF_NO_PI`/`IFF_ONE_QUEUE`. Already in lockfile at 0.2.184
# transitively via nix; this just makes it a direct dep.
libc = "0.2.184"
# `nix::ioctl_write_ptr_bad!` — same macro family as tui.rs's
# `ioctl_read_bad!`. The `ioctl` feature is the only one we need.
# `ioctl` would be the feature for `ioctl_write_ptr_bad!` — but we
# bypass the macro (TUNSETIFF is encoded _IOW yet kernel writes
# back; the macro generates `*const`, wrong contract). So: no
# `ioctl` feature. Direct `libc::ioctl` for that shim.
#
# `socket` IS pulled. SCM_RIGHTS fd reception over AF_UNIX is ~40
# LOC of cmsghdr/CMSG_FIRSTHDR/CMSG_DATA boilerplate by hand;
# nix::sys::socket::recvmsg + ControlMessageOwned::ScmRights
# collapses it AND structurally avoids the CMSG_FIRSTHDR NULL-deref
# trap (nix's iterator handles empty control buffers). The fourth
# unsafe-shim instance — but this time, nix earns the dep.
# `uio` gates cmsg_space! + recvmsg + ControlMessageOwned. The
# `socket` feature alone gives the AF_UNIX types but not the cmsg
# machinery. Both needed.
# `net` for `if_nametoindex` (raw_socket backend's SIOCGIFINDEX
# substitution).
nix = { version = "0.31", default-features = false, features = ["socket", "uio", "net"] }

# `log::warn!` for the vnet_hdr feature-detect failures in linux.rs and
# the `recvmsg_x` runt/ENOSYS debug lines on macOS.
log = "0.4"

# `ioctl` + `fs` only on macOS, for the utun open path:
# `SysControlAddr` (CTLIOCGINFO) needs `ioctl`; `nix::fcntl` (O_NONBLOCK
# / FD_CLOEXEC — macOS has no SOCK_NONBLOCK type bit) needs `fs`. Linux
# uses neither; keeping the extra surface off the primary target.
[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", default-features = false, features = ["ioctl", "fs"] }

[dev-dependencies]
# `user` for `geteuid()` (root-skip in unit tests). `fs` for
# `nix::unistd::dup` in tests/mq.rs — previously this only compiled
# because tincd-bpf's dev-dep enabled `fs` and Cargo unified features
# across the workspace; `cargo clippy -p tinc-device` alone would
# fail to build the integration test.
# Not in main dep: the device crate doesn't check uid at runtime
# (CAP_NET_ADMIN, not root, is what matters; the daemon checks
# capabilities via `nix::sys::capability` or just lets the open
# fail with EACCES). The test skip is the only consumer.
nix = { version = "0.31", default-features = false, features = ["user", "fs"] }

[lints]
workspace = true
