[package]
name = "tinc-event"
version = "0.1.0"
edition.workspace = true

# Ports event.c (137 LOC) + linux/event.c (169 LOC) + signal.c (90 LOC).
# bsd/event.c is not ported — io/kqueue.rs slot is open for when
# macOS CI lands. event_select.c not needed — no pre-2.6 kernels.

[dependencies]
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["event", "signal", "fs"] }

[lints]
workspace = true
