[package]
name = "tinc-tools"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "sptps_keypair"
path = "src/bin/sptps_keypair.rs"

[[bin]]
name = "sptps_test"
path = "src/bin/sptps_test.rs"

[[bin]]
name = "tinc"
path = "src/bin/tinc.rs"

[dependencies]
tinc-crypto = { path = "../tinc-crypto" }
tinc-sptps = { path = "../tinc-sptps" }
tinc-conf = { path = "../tinc-conf" }
# For Subnet validation in `cmd_config set Subnet ...`. The dep is
# zero-dependency itself, so cost is one extra crate compile (~2s).
# Correct layering: tinc-proto IS the wire-format crate, Subnet IS
# wire-format, cmd_config validates a wire-format thing.
tinc-proto = { path = "../tinc-proto" }
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["poll", "fs", "hostname", "user", "signal"] }
# For `cmd::info::fmt_localtime` — nix doesn't wrap `localtime_r`
# (it's a libc library fn for TZ-file parsing, not a syscall). Already
# transitive via nix; adding the direct dep is free in build-time terms.
# Pin to the same 0.2 series nix uses so we don't get two libcs.
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "warn"
