[package]
name = "tincd-bpf"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Kernel steering for shard-per-thread tincd: cBPF reuseport + automq detach. No eBPF."
publish = false

# ──────────── Why not aya/libbpf-rs ────────────────────────────────
#
# The plan said aya, but the progs we actually need are ~20 instructions
# each: read IP version nibble, LPM lookup, ARRAY lookup, return. No BTF
# (we hand-define key structs), no CO-RE (we control the userspace side),
# no ELF (no separate .bpf.c compilation). aya's value is the loader for
# big progs — we have ~160 bytes of bytecode total.
#
# What we get from raw bpf(2): two syscall shims (BPF_MAP_CREATE,
# BPF_PROG_LOAD, both already proven in shard-proto), zero new deps,
# Cargo.lock unchanged. The bytes we send the kernel are literally the
# instruction array — auditable in a hex dump.
#
# What we lose: verifier error decoding (we get the raw log string).
# Mitigated by the progs being tiny enough to debug by inspection.

[dependencies]
# `libc::SYS_bpf`, `libc::ioctl`, `sock_filter`, `sock_fprog`, the
# REUSEPORT setsockopt path. Same version as tinc-device's pinned dep.
libc = "0.2.184"
# Safe socket()/setsockopt(SO_REUSEPORT)/bind() so cbpf.rs only keeps
# the one irreducible unsafe (SO_ATTACH_REUSEPORT_CBPF).
[target.'cfg(target_os = "linux")'.dependencies]
socket2 = { version = "0.5", features = ["all"] }
# `setsockopt(AttachReusePortCbpf)` so cbpf.rs has zero unsafe.
nix = { version = "0.31", default-features = false, features = ["socket"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
# Tests use Tun::open_mq + the hairpin-echo rig. dev-dep only:
# tincd-bpf has no compile-time link to tinc-device (the daemon
# wires them at runtime).
tinc-device = { path = "../tinc-device" }
# Safe fd ops in tests/steer.rs (read/write/dup/recv) — replaces ~16
# `unsafe { libc::* }` sites with RAII OwnedFd + nix::Result. Same
# 0.29 the rest of the workspace pins.
nix = { version = "0.31", default-features = false, features = ["fs", "socket"] }

[lints]
workspace = true

# Unsafe is unavoidable for bpf(2) — `union bpf_attr` is what it is.
# The crate-level forbid would block the entire crate; instead, scope
# it: lib.rs sets `#![deny(unsafe_code)]` then each shim function
# `#[allow(unsafe_code)]`. Same third-instance pattern as tinc-device.
