[package]
name = "tincd"
version = "0.1.0"
edition = "2021"

# Phase 5: tincd daemon. Currently: walking-skeleton + TCP/UDP
# listeners. Boots, opens dummy device, binds TCP+UDP+unix, accepts
# control conns over unix OR TCP, serves REQ_STOP, exits 0.
#
# Proves: tinc-event dispatch enum compiles inside an actual loop body;
# tinc-conf/tinc-device/tinc-event compose; ctl.rs talks to a real
# daemon (tinc_cli.rs's fake_daemon_setup is the inverse of this);
# socket2 wraps the C's four-step socket→setsockopt→bind→listen.

[[bin]]
name = "tincd"
path = "src/main.rs"

[dependencies]
tinc-conf = { path = "../tinc-conf" }
tinc-crypto = { path = "../tinc-crypto" }
tinc-device = { path = "../tinc-device" }
tinc-event = { path = "../tinc-event" }
tinc-graph = { path = "../tinc-graph" }
tinc-proto = { path = "../tinc-proto" }
tinc-sptps = { path = "../tinc-sptps" }

# slotmap for ConnId. Generational keys: a stale ConnId can't dangle
# into a slot reused by a different connection. The C uses raw
# connection_t* and the io_tree.generation guard; we use opaque keys.
slotmap = "1"

# C `randomize` → OsRng. control.c:149 fills 32 bytes for the cookie.
# rand_core 0.6 (NOT 0.9) — same as tinc-tools, keeps lock unified.
rand_core = { version = "0.6", features = ["getrandom"] }

# sha2 for NodeId6 (node.c:126-128: sha512(name, strlen, buf), keep
# first 6). Already in the lockfile via tinc-crypto / ed25519-dalek.
sha2.workspace = true

log = "0.4"
# Minimal env_logger: no anstream/anstyle/jiff/regex. RUST_LOG=tincd
# substring filtering works without regex; that's enough.
env_logger = { version = "0.11", default-features = false }

libc = "0.2"

# socket2 for the four-step socket→setsockopt→bind→listen sequence.
# std's TcpListener::bind is atomic, no seam for IPV6_V6ONLY. socket2
# is std-with-seams; only dep is libc (already linked). NOT a new shim-
# matrix row — same quadrant as slotmap-instead-of-hand-rolling-a-slab.
# No 'all' feature: V6ONLY/REUSEADDR/NODELAY/BROADCAST are all ungated.
socket2 = "0.5"

# zlib levels 1-9. miniz backend (no C dep). The C tinc uses real
# zlib; output bytes differ but cross-decompress fine (deflate is a
# SPEC, both implement it). KAT in compress.rs proves cross-decode.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# LZ4 level 12. Block format (no frame, no length prefix), matches
# the C's LZ4_compress_fast_extState wire output. KAT proves it.
lz4_flex = { version = "0.11", default-features = false }

# STUB(chunk-9-lzo): vendor minilzo.c via cc crate. lzo-sys exists
# but is bindings-only; rust-lzo/lzo1x are pure-rust ports of unknown
# quality. LZO is the tinc 1.0 DEFAULT — wire-compat is non-negotiable.
# Decision deferred; compress::Level::LzoLo/LzoHi return None.

[dev-dependencies]
# Integration tests: tempdir for confbase, no other deps.
# Hand-rolled TmpGuard (per the standing rule: NamedTempFile not used).
# tinc-conf/-crypto/-sptps for test helpers (write_pem, SigningKey,
# Sptps::start — the integration test IS the SPTPS initiator side).
# These are also in [dependencies] but listing here documents the
# test-side usage (write keys, drive SPTPS).
tinc-conf = { path = "../tinc-conf" }
tinc-crypto = { path = "../tinc-crypto" }
tinc-sptps = { path = "../tinc-sptps" }
