[package]
name = "tincd"
version = "0.1.0"
edition.workspace = true

# Phase 5: tincd daemon. Currently: walking-skeleton + TCP/UDP
# listeners. Boots, opens dummy device, binds TCP+UDP+unix, accepts
# control conns over unix OR TCP, serves REQ_STOP, exits 0.
#
# Proves: tinc-event dispatch enum compiles inside an actual loop body;
# tinc-conf/tinc-device/tinc-event compose; ctl.rs talks to a real
# daemon (tinc_cli.rs's fake_daemon_setup is the inverse of this);
# socket2 wraps the C's four-step socket→setsockopt→bind→listen.

[[bin]]
name = "tincd"
path = "src/main.rs"

[dependencies]
tinc-conf = { path = "../tinc-conf" }
tinc-crypto = { path = "../tinc-crypto" }
tinc-device = { path = "../tinc-device" }
tinc-event = { path = "../tinc-event" }
tinc-graph = { path = "../tinc-graph" }
tinc-proto = { path = "../tinc-proto" }
tinc-sptps = { path = "../tinc-sptps" }

# slotmap for ConnId. Generational keys: a stale ConnId can't dangle
# into a slot reused by a different connection. The C uses raw
# connection_t* and the io_tree.generation guard; we use opaque keys.
slotmap = "1"

# C `randomize` → OsRng. control.c:149 fills 32 bytes for the cookie.
# rand_core 0.6 (NOT 0.9) — same as tinc-tools, keeps lock unified.
rand_core = { version = "0.6", features = ["getrandom"] }

# sha2 for NodeId6 (node.c:126-128: sha512(name, strlen, buf), keep
# first 6). Already in the lockfile via tinc-crypto / ed25519-dalek.
sha2.workspace = true

thiserror.workspace = true

log = "0.4"
# Minimal env_logger: no anstream/anstyle/jiff/regex. RUST_LOG=tincd
# substring filtering works without regex; that's enough.
env_logger = { version = "0.11", default-features = false }

libc = "0.2"

# Safe wrappers for read/send/fcntl/umask/socketpair. Same dep as
# tinc-device. fs: umask + fcntl OFlag/FdFlag. socket: send/socketpair.
# Drops 9 #[allow(unsafe_code)] sites — the unsafe was just ceremony
# around the libc call boundary.
nix = { version = "0.29", default-features = false, features = ["fs", "socket", "net"] }

# socket2 for the four-step socket→setsockopt→bind→listen sequence.
# std's TcpListener::bind is atomic, no seam for IPV6_V6ONLY. socket2
# is std-with-seams; only dep is libc (already linked). NOT a new shim-
# matrix row — same quadrant as slotmap-instead-of-hand-rolling-a-slab.
# No 'all' feature: V6ONLY/REUSEADDR/NODELAY/BROADCAST are all ungated.
socket2 = "0.5"

# zlib levels 1-9. miniz backend (no C dep). The C tinc uses real
# zlib; output bytes differ but cross-decompress fine (deflate is a
# SPEC, both implement it). KAT in compress.rs proves cross-decode.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

# LZ4 level 12. Block format (no frame, no length prefix), matches
# the C's LZ4_compress_fast_extState wire output. KAT proves it.
lz4_flex = { version = "0.11", default-features = false }

# LZO levels 10–11: vendored minilzo.c (GPL-2.0+, same as tinc) via
# cc crate. lzo-sys is bindings-only (still needs system liblzo2);
# rust-lzo/lzo1x are pure-rust ports of unknown quality. LZO is the
# tinc 1.0 DEFAULT — wire-compat is non-negotiable, so we call THE
# SAME C code C tinc calls. minilzo lacks lzo1x_999_compress (level
# 11 compress); see minilzo/README.
[build-dependencies]
cc = "1.0"

[dev-dependencies]
# Integration tests: tempdir for confbase, no other deps.
# Hand-rolled TmpGuard (per the standing rule: NamedTempFile not used).
# tinc-conf/-crypto/-sptps for test helpers (write_pem, SigningKey,
# Sptps::start — the integration test IS the SPTPS initiator side).
# These are also in [dependencies] but listing here documents the
# test-side usage (write keys, drive SPTPS).
tinc-conf = { path = "../tinc-conf" }
tinc-crypto = { path = "../tinc-crypto" }
tinc-sptps = { path = "../tinc-sptps" }
# tinc-tools for the `tinc_join_against_real_daemon` integration test:
# the REAL `cmd::join::join()` runs in-process against the spawned
# daemon. Stronger than the in-process pump test in join.rs (real
# TCP, real epoll, real daemon's `?` branch).
tinc-tools = { path = "../tinc-tools" }
# autoconnect.rs tests: deterministic RNG. rand_chacha is already in the
# lockfile (transitively via rand 0.8). rand_core 0.6 trait compat.
rand_chacha = "0.3"
# throughput.rs: parse iperf3 --json. Both already in workspace lock.
serde = { workspace = true }
serde_json = { workspace = true }
